<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_wrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_40"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_hello"
                android:textColor="@color/color_212121"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/define_dimen_32"
                android:layout_height="@dimen/define_dimen_32"
                android:layout_marginStart="@dimen/define_dimen_5"
                android:src="@drawable/ic_wave" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:text="@string/sign_in_request"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:text="@string/str_email"
            android:textColor="@color/color252525"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@drawable/bg_edittext_inactive"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/define_dimen_5"
            android:weightSum="1">

            <ImageView
                android:id="@+id/img_email"
                android:layout_width="@dimen/define_dimen_24"
                android:layout_height="@dimen/define_dimen_24"
                android:layout_marginHorizontal="@dimen/define_dimen_5"
                android:padding="@dimen/define_dimen_4"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/define_dimen_48"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:id="@+id/img_clear"
                android:layout_width="@dimen/define_dimen_30"
                android:layout_height="@dimen/define_dimen_30"
                android:layout_marginStart="@dimen/define_dimen_5"
                android:padding="@dimen/define_dimen_10"
                android:src="@drawable/ic_clear_no_bg"
                android:visibility="gone" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:text="@string/str_password"
            android:textColor="@color/color252525"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@drawable/bg_edittext_inactive"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/define_dimen_5"
            android:weightSum="1">

            <ImageView
                android:id="@+id/img_password"
                android:layout_width="@dimen/define_dimen_24"
                android:layout_height="@dimen/define_dimen_24"
                android:layout_marginHorizontal="@dimen/define_dimen_5"
                android:padding="@dimen/define_dimen_4"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/define_dimen_48"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:id="@+id/img_password_show_hide"
                android:layout_width="@dimen/define_dimen_32"
                android:layout_height="@dimen/define_dimen_32"
                android:layout_marginStart="@dimen/define_dimen_5"
                android:padding="@dimen/define_dimen_8"
                android:src="@drawable/ic_show" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:padding="@dimen/define_dimen_10"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdb_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin" />

            <RadioButton
                android:id="@+id/rdb_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/define_dimen_20"
                android:text="@string/user" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/define_dimen_18">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_not_account"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/define_dimen_6"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/define_dimen_16"
        android:layout_marginTop="@dimen/define_dimen_30"
        android:layout_marginBottom="@dimen/define_dimen_20"
        android:text="@string/sign_in_user"
        app:backgroundTint="@color/colorPrimaryDark" />


</RelativeLayout>