<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_wrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="Autofill, ContentDescription">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/define_dimen_12"
        android:src="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_back"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_40"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewPrimaryLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_your_password" />

            <ImageView
                android:layout_width="@dimen/define_dimen_32"
                android:layout_height="@dimen/define_dimen_32"
                android:layout_marginStart="@dimen/define_dimen_5"
                android:src="@drawable/ic_key" />
        </LinearLayout>

        <TextView
            style="@style/TextViewSecondarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:text="@string/forgot_password_guide" />

        <TextView
            style="@style/TextViewPrimaryNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:text="@string/str_email" />


        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@drawable/bg_edittext_inactive"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/define_dimen_5"
            android:weightSum="1">

            <ImageView
                android:id="@+id/img_email"
                android:layout_width="@dimen/define_dimen_24"
                android:layout_height="@dimen/define_dimen_24"
                android:layout_marginHorizontal="@dimen/define_dimen_5"
                android:padding="@dimen/define_dimen_4"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/define_dimen_48"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:id="@+id/img_clear"
                android:layout_width="@dimen/define_dimen_30"
                android:layout_height="@dimen/define_dimen_30"
                android:layout_marginStart="@dimen/define_dimen_5"
                android:padding="@dimen/define_dimen_10"
                android:src="@drawable/ic_clear_no_bg"
                android:visibility="gone" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/rdb_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin" />

            <RadioButton
                android:id="@+id/rdb_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/define_dimen_20"
                android:text="@string/user" />
        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/btn_reset_password"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/define_dimen_16"
        android:layout_marginTop="@dimen/define_dimen_30"
        android:layout_marginBottom="@dimen/define_dimen_20"
        android:text="@string/reset_password"
        app:backgroundTint="@color/colorPrimaryDark" />


</RelativeLayout>