<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        tools:ignore="ContentDescription">

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contact"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xnormal" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/define_dimen_16"
        android:paddingTop="@dimen/define_dimen_16">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/define_dimen_120"
            android:layout_height="@dimen/define_dimen_120"
            android:src="@drawable/img_splash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:text="@string/coffee_nb"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_xnormal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/splash_text"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/define_dimen_16"
        android:layout_marginTop="@dimen/define_dimen_16"
        android:layout_marginBottom="@dimen/define_dimen_16"
        android:background="@color/textColorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/contact_suggest"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_small" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:layout_marginBottom="@dimen/define_dimen_6"
        android:overScrollMode="never"
        android:paddingHorizontal="@dimen/define_dimen_8"
        tools:listitem="@layout/item_contact" />
</LinearLayout>
